@startuml

title __GAMESTATES's Class Diagram__\n

  namespace Game {
    namespace tates {
      class GameStates.GamePausedState {
          + clearUI()
          + init()
          + render()
          + tick()
      }
    }
  }
  

  namespace Game {
    namespace tates {
      abstract class GameStates.GameState {
          {static} # GameUI : ArrayList<UI_Elemenent>
          {static} # MenuUI : ArrayList<UI_Elemenent>
          {static} # next : GameState
          {static} # prev : GameState
          {static} - instance : GameState
          {abstract} + clearUI()
          {static} + getInstance()
          {abstract} + init()
          + nextState()
          {static} + prevState()
          {abstract} + render()
          {static} + setInstance()
          {static} + setNext()
          {abstract} + tick()
      }
    }
  }
  

  namespace Game {
    namespace tates {
      class GameStates.GameplayState {
          + GameplayState()
          + clearUI()
          + init()
          + render()
          + tick()
      }
    }
  }
  

  namespace Game {
    namespace tates {
      class GameStates.MenuState {
          + clearUI()
          + init()
          + render()
          + tick()
      }
    }
  }
  

  GameStates.GamePausedState -up-|> GameStates.GameState
  GameStates.GameplayState -up-|> GameStates.GameState
  GameStates.MenuState -up-|> GameStates.GameState


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
